2002-08-15  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-window.c (construct_priv): put
	the dock inside an hbox, inside the window, with
	the status outside the dock, so re-arrangement works
	better. #82546, #89261
	(bonobo_window_get_contents): just use the dock.
	(bonobo_window_set_contents): ditto.
	(bonobo_window_show_all): upd.
	(bonobo_window_focus): upd.
	Thanks to herzi@abi02.de for the initial patch.

2002-08-06  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-socket.c (bonobo_socket_expose_event): Call the
	handler of our parent class.

2002-08-05  Michael Meeks  <michael@ximian.com>

	* Version 2.0.1

2002-07-27  James Henstridge  <james@daa.com.au>

	* glade/glade-bonobo.c (dock_item_set_behavior): add function to
	handle behavior property for BonoboDockItem objects.
	(dock_item_build): free dockitem->name to trap potential memory
	leak.
	(add_dock_item): behavior is a widget property, rather than a
	child packing property (we were ignoring it anyway).

2002-07-26  Gustavo Noronha Silva  <kov@beterraba>

	* configure.in: added pt_BR to ALL_LINGUAS

2002-07-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (real_exec_verb):
	copy the verb over the emission, dup the component.
	(impl_emit_event_on): same fix.

2002-07-17  Morten Welinder  <terra@diku.dk>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_build_help_menu): No
	foo.

2002-07-16  Brian Cameron  <Brian.Cameron@sun.com>

	* samples/compound-doc/container/Makefile.am
	No longer install sample-container-2.

2002-07-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_get_path_child): impl. & optimize.

	* bonobo/bonobo-ui-xml.c (find_child): kill.
	(xml_get_path): upd.

	* bonobo/bonobo-ui-toolbar.c
	(bonobo_ui_toolbar_instance_init): set the a11y
	role on the toolbar to ROLE_TOOL_BAR.

2002-07-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c
	(bonobo_ui_toolbar_insert): guard against