@@ -26,6 +26,7 @@ G_BEGIN_DECLS
 /* To debug render issues in plug/socket/control */
 #define noDEBUG_CONTROL
 
+void       bonobo_ui_image_cache_trash    (void);
 int        bonobo_ui_preferences_shutdown (void);
 void       bonobo_ui_image_set_pixbuf     (GtkImage       *image,
 					   GdkPixbuf      *pixbuf);
